--- a/bos_fore/pom.xml
+++ b/bos_fore/pom.xml
@@ -1,20 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.eliefly</groupId>
+        <artifactId>common_parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <groupId>com.eliefly</groupId>
-    <artifactId>common_parent</artifactId>
+    <artifactId>bos_fore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>com.eliefly</groupId>
-  <artifactId>bos_fore</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <description>BOS前台系统</description>
-  <dependencies>
-      <dependency>
-          <groupId>com.eliefly</groupId>
-          <artifactId>bosUtils</artifactId>
-          <version>0.0.1-SNAPSHOT</version>
-      </dependency>
-  </dependencies>
+    <packaging>war</packaging>
+    <description>BOS前台系统</description>
+    <dependencies>
+        <dependency>
+            <groupId>com.eliefly</groupId>
+            <artifactId>bosUtils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.eliefly</groupId>
+            <artifactId>Domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
