--- a/bos_management/Web/src/main/webapp/WEB-INF/web.xml
+++ b/bos_management/Web/src/main/webapp/WEB-INF/web.xml
@@ -10,13 +10,25 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+  <!-- 配置CXF的Servlet -->
+  <servlet>
+    <servlet-name>cxfServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>cxfServlet</servlet-name>
+    <url-pattern>/webservice/*</url-pattern>
+  </servlet-mapping>
+  
+   <!-- 指定Spring框架配置文件的位置 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
+  <!-- 配置Spring框架的监听器 -->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
 
   <!-- 配置struts前端控制器 -->
   <filter>
