--- a/bos_management/Web/src/main/webapp/WEB-INF/web.xml
+++ b/bos_management/Web/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,24 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
+  
+    <!--
+        Spring提供的过滤器,用于整合shiro框架
+        这个过滤器一定要写在struts前端控制器的前面
+        项目启动的时候,会初始化本过滤器, 在过滤器创建的时候,需要接收一个参数,这个参数需要在applicationContext.xml中声明
+        对应的这个bean的id必须和filter的name属性中的值保持一致
+    -->
+    <filter>
+        <filter-name>shiroFilterFactoryBean</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>shiroFilterFactoryBean</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+  
 
   <!-- 配置struts前端控制器 -->
   <filter>
